aml-syntax/src/parser/snapshots/aml_syntax__parser__tests__simple_text_element.snap
---
source: aml-syntax/src/parser/tests.rs
assertion_line: 17
expression: ast
---
nodes:
  - Text:
      values:
        - String:
            value: "\"Hello\""
            location:
              start_byte: 5
              end_byte: 12
      attributes: []
      children: []
      text: "text \"Hello\""
      location:
        start_byte: 0
        end_byte: 12
      keyword:
        start_byte: 0
        end_byte: 4
variables: {}
scopes:
  - variables: []
    parent: ~
