aml-syntax/src/parser/snapshots/aml_syntax__parser__tests__span_element_with_attributes.snap
---
source: aml-syntax/src/parser/tests.rs
expression: ast
---
nodes:
  - Span:
      values:
        - String:
            value: "\"Hello\""
            location:
              start_byte: 27
              end_byte: 34
      attributes:
        - Attribute:
            name:
              Identifier:
                value: foreground
                location:
                  start_byte: 6
                  end_byte: 16
            value:
              Primitive:
                value:
                  Hex:
                    r: 255
                    g: 0
                    b: 0
                location:
                  start_byte: 18
                  end_byte: 25
                original: "#ff0000"
            location:
              start_byte: 6
              end_byte: 25
            original: "foreground: #ff0000"
      value: "span [foreground: #ff0000] \"Hello\""
      location:
        start_byte: 0
        end_byte: 34
      keyword:
        start_byte: 0
        end_byte: 4
variables: {}
scopes:
  - variables: []
    parent: ~
