aml-syntax/src/parser/snapshots/aml_syntax__parser__tests__with_statement.snap
---
source: aml-syntax/src/parser/tests.rs
expression: ast
---
nodes:
  - With:
      binding:
        Identifier:
          value: list
          location:
            start_byte: 6
            end_byte: 10
      as_node:
        start_byte: 11
        end_byte: 13
      expr:
        List:
          items:
            - Primitive:
                value:
                  Int: 1
                location:
                  start_byte: 15
                  end_byte: 16
                original: "1"
            - Primitive:
                value:
                  Int: 2
                location:
                  start_byte: 18
                  end_byte: 19
                original: "2"
            - Primitive:
                value:
                  Int: 3
                location:
                  start_byte: 21
                  end_byte: 22
                original: "3"
          location:
            start_byte: 14
            end_byte: 23
          original: "[1, 2, 3]"
      children: []
      location:
        start_byte: 1
        end_byte: 23
      original: "with list as [1, 2, 3]"
variables: {}
scopes:
  - variables: []
    parent: ~
